tests/fixtures/LatestTests/DynamicVariableTests/errors/assign_const.fg
/; EXPECT_ERROR: UnexpectedToken
const var x = 5
x = 10
print(x, "\n")

